--- a/style.css
+++ b/style.css
@@ -4,9 +4,13 @@
   --primary-color: #3498db;
   --secondary-color: #00fffc;
   --tertiary-color: #2ecc71;
-  --forth-color: aquamarine;
-  --background-color: rgb(39, 35, 35);
-  --text-color: #2c3e50;
+  --forth-color: #BB86FC;
+  --fifth-color: #03DAC6;
+  --background-color: #121212;
+  --sections-color: #1E1E1E;
+  --border-color: #292929;
+  --text-primary-color: #E0E0E0;
+  --text-secondary-color: #B0B0B0;
   --header-height: 70px;
   --sidebar-width: 200px;
   --sidebar-collapsed-width: 60px;
@@ -42,8 +46,9 @@ body.sidebar-collapsed {
 /* header */
 header {
   grid-area: header;
-  background-color: rgb(38, 30, 112);
-  color: white;
+  background-color: #1E1E1E;
+  border: solid 3px #292929;
+  color: #E0E0E0;
   padding: 0 2rem;
   display: flex;
   justify-content: end;
@@ -60,6 +65,9 @@ header {
   font-size: 1.5rem;
   font-weight: bold;
 }
+.logo:hover {
+  color: #E0E0E0;
+}
 
 nav a {
   color: white;
@@ -69,15 +77,55 @@ nav a {
 }
 
 nav a:hover {
+  background: (255, 255, 255, 0.1);
   opacity: 0.8;
+}
+
+.navbar-collapse {
+  margin: 1rem;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.show {
+  background: darkblue;
+  transition: grid-template-columns 0.3s ease;
+}
+
+.nav-link {
+  color: white;
+  font-size: 1rem;
+  font-weight: bold;
+}
+.nav-link:hover {
+  color: gray;
+}
+
+.nav-link.disabled {
+  color: gray;
+}
+
+.navbar-collapse.show {
+  padding: 1rem;
+  border-radius: .375rem;
+}
+
+.navbar-toggler {
+  background: rgb(20, 76, 197);
+  color: rgb(52, 111, 201);
+}
+
+.navbar-toggler:hover {
+  opacity: 0.75;
 }
 
 
 /* Sidebar */
 .sidebar {
   grid-area: sidebar;
-  background-color: #071a2e;
-  color: white;
+  background-color: #1E1E1E;
+  border: solid 2px #292929;
+  color: #E0E0E0;
   padding: 2rem 1rem;
   position: fixed;
   top: var(--header-height);
@@ -241,15 +289,6 @@ footer {
 
 /*WebsimAI llega hasta aqui*/
 
-.navbar-collapse {
-  align-items: center;
-  justify-content: space-between;
-}
-
-.nav-link {
-  font-size: 1rem;
-  font-weight: bold;
-}
 
 /* Estilos generales */
 
