--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   --text-secondary-color: #B0B0B0;
   --header-height: 70px;
   --sidebar-width: 200px;
-  --sidebar-collapsed-width: 60px;
+  /* --sidebar-collapsed-width: 60px; */
   --footer-height: 60px;
 }
 
@@ -169,6 +169,7 @@ body.sidebar-collapsed .sidebar-nav a span {
 }
 
 .sidebar-toggle {
+  margin-left: 0.5rem;
   position: absolute;
   bottom: 1rem;
   right: 1rem;
